all pages done, swiperjs added for Now Playing

--- a/movie-details.html
+++ b/movie-details.html
@@ -34,7 +34,7 @@
     </header>
 
     <!-- Movie Details -->
-    <section class="container">
+    <section class="container backdrop">
       <div class="back">
         <a class="btn" href="index.html">Back To Movies</a>
       </div>
