--- a/shows.html
+++ b/shows.html
@@ -37,6 +37,7 @@
     <section class="container">
       <h2>Popular TV Shows</h2>
       <div id="popular-shows" class="grid">
+      </div>
     </section>
 
     <!-- Footer -->
